# QtCalc

./: CMakeLists.txt  README.md  button.cpp  button.h  calculator.cpp  calculator.h  calculator.pro  main.cpp
